--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,6 +7,11 @@
 <ion-content [fullscreen]="true">
 
     <div id="container">
+        <div id="image-div">
+            <img id="myImg" src="../../../assets/user.png" alt="">
+        </div>
+        <br>
+
         <ion-button color="danger" (click)="enterApp()">
             <p>Login
                 <ion-icon name="logo-google"></ion-icon>
