--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,6 +8,16 @@
 
 <ion-content [fullscreen]="true">
     <div id="container">
+
+        <ion-button (click)="bluetooth()">
+            <p>
+                Bluetooth
+                <ion-icon name="bluetooth-outline"></ion-icon>
+            </p>
+
+        </ion-button>
+        <br>
+
         <ion-button (click)="scanCode()">
             <p>
                 Scan
