--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,12 @@
             <ion-icon name="trash"></ion-icon>
             <ion-label>Trash</ion-label>
         </ion-tab-button>
+
+        <ion-tab-button tab="tab4">
+            <ion-icon name="stats-chart-outline"></ion-icon>
+            <ion-label>Status</ion-label>
+        </ion-tab-button>
+
     </ion-tab-bar>
 
 </ion-tabs>
