status page elements

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -8,6 +8,15 @@
 
 <ion-content [fullscreen]="true">
     <div id="container">
-        <p>STATUS</p>
+        <p *ngIf="paperStatus">
+            <ion-icon name="trash-outline"></ion-icon>
+            <b>Paper Basket Status</b>: <i>{{paperStatus}}</i>
+        </p>
+        <br>
+
+        <p *ngIf="plasticStatus">
+            <ion-icon name="trash-outline"></ion-icon>
+            <b>Plastic Basket Status</b>: <i>{{plasticStatus}}</i>
+        </p>
     </div>
 </ion-content>
