add product modal

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -35,6 +35,11 @@
             </section>
         </div>
 
+        <br>
+
+
+        <ion-button color="primary" (click)="addProduct()">Add Product</ion-button>
+
 
 
     </div>
