--- a/src/app/product-modal/product-modal.page.html
+++ b/src/app/product-modal/product-modal.page.html
@@ -26,13 +26,13 @@
 
         <div style="margin-left: 1rem;">
             <div>
-                <input type="radio" name="type" value="Plastic" [(ngModel)]="productType" id="plastic">
+                <input type="radio" name="type" value="plastic" [(ngModel)]="productType" id="plastic">
                 <label style="font-size: large;" for="plastic">Plastic</label>
             </div>
             <br>
 
             <div>
-                <input type="radio" name="type" value="Paper" [(ngModel)]="productType" id="paper">
+                <input type="radio" name="type" value="paper" [(ngModel)]="productType" id="paper">
                 <label style="font-size: large;" for="paper">Paper</label>
             </div>
         </div>
